<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie"/>

    <item
        android:id="@+id/nav_tvShow"
        android:icon="@drawable/ic_tvshow"
        android:title="@string/tv_show"/>

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"/>

</menu>